--- a/MiniMarket/app/build.gradle
+++ b/MiniMarket/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "com.balinasoft.mallione"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
+        versionCode 13
+        versionName "1.0.11"
         renderscriptTargetApi 19
         renderscriptSupportModeEnabled true
         multiDexEnabled true
@@ -49,13 +49,13 @@ dependencies {
     compile 'jp.wasabeef:picasso-transformations:2.1.0'
     compile 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
     compile 'com.github.orangegangsters:swipy:1.2.3@aar'
-    compile 'com.google.android.gms:play-services:9.2.1'
+//    compile 'com.google.android.gms:play-services:9.2.1'
     compile 'com.android.support:appcompat-v7:23.0.0'
-    compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.squareup.retrofit2:retrofit:2.0.0'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0'
-    compile 'com.squareup.okhttp:okhttp:2.0.0'
-    compile 'com.android.support:design:23.0.0'
+    compile ('com.android.support:support-v4:23.4.0'){
+        force = true;
+    }
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.nineoldandroids:library:2.4.0'
@@ -65,19 +65,26 @@ dependencies {
     compile 'com.azoft.carousellayoutmanager:carousel:1.1.1'
     compile 'com.github.lsjwzh.RecyclerViewPager:lib:v1.1.0-beta5'
     compile 'com.android.support:cardview-v7:23.0.0'
-    compile 'com.google.firebase:firebase-core:9.2.1'
+    compile 'com.google.firebase:firebase-core:9.6.1'
+    compile 'com.google.firebase:firebase-auth:9.6.1'
     compile 'com.merhold.extensiblepageindicator:extensiblepageindicator:1.0.1'
     compile 'com.alexvasilkov:gesture-views:2.1.1'
-    compile 'com.google.android.gms:play-services-ads:9.2.1'
-    compile 'com.google.android.gms:play-services-identity:9.2.1'
-    compile 'com.google.android.gms:play-services-gcm:9.2.1'
+    compile 'com.google.android.gms:play-services-ads:9.6.1'
+    compile 'com.google.android.gms:play-services-gcm:9.6.1'
+    compile 'com.google.android.gms:play-services-basement:9.6.1'
+    compile 'com.google.android.gms:play-services-identity:9.6.1'
+
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.daimajia.swipelayout:library:1.2.0@aar'
     compile 'info.hoang8f:android-segmented:1.0.6'
     compile 'com.github.renaudcerrato:FloatingSearchView:1.0.1'
-    compile 'com.google.firebase:firebase-messaging:9.2.1'
+    compile 'com.google.firebase:firebase-messaging:9.6.1'
+    compile "com.google.firebase:firebase-database:9.6.1"
     compile 'com.squareup.okhttp3:okhttp:3.3.0'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.3.0'
+    compile 'com.android.support:recyclerview-v7:23.0.0'
+    compile 'com.android.support:recyclerview-v7:23.0.0'
+    compile 'com.karumi:dexter:2.3.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
