--- a/MiniMarket/app/build.gradle
+++ b/MiniMarket/app/build.gradle
@@ -85,6 +85,9 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.0.0'
     compile 'com.android.support:recyclerview-v7:23.0.0'
     compile 'com.karumi:dexter:2.3.1'
+//    compile 'com.github.ekimual:croperino:1.0.2'
+//    compile 'com.jakewharton:butterknife:7.0.1'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
