--- a/MiniMarket/app/src/main/AndroidManifest.xml
+++ b/MiniMarket/app/src/main/AndroidManifest.xml
@@ -23,7 +23,9 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="com.balinasoft.minimarket.permission.C2D_MESSAGE" />
-
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
     <permission
         android:name="com.balinasoft.mallione.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
